# python-pseudocode

./: README.md  pyproject.toml  requirements.txt
.wex/: .gitignore  config.yml
.wex/ai/engrams/suite-wexample_pip_suite_manager-performance/src/wexample_pseudocode/common/: docstring.py.engram.json  type_normalizer.py.engram.json
.wex/ai/engrams/suite-wexample_pip_suite_manager-performance/src/wexample_pseudocode/config/: class_config.py.engram.json  class_method_config.py.engram.json  class_property_config.py.engram.json  constant_config.py.engram.json  function_config.py.engram.json  function_parameter_config.py.engram.json  generator_config.py.engram.json  method_parameter_config.py.engram.json
.wex/ai/engrams/suite-wexample_pip_suite_manager-performance/src/wexample_pseudocode/generator/: abstract_generator.py.engram.json  code_generator.py.engram.json  pseudocode_generator.py.engram.json
.wex/ai/engrams/suite-wexample_pip_suite_manager-performance/src/wexample_pseudocode/parser/: class_parser.py.engram.json  function_parser.py.engram.json  module_parser.py.engram.json
.wex/knowledge/readme/: introduction.md
.wex/knowledge/roadmap/todo/: generator-pseudocode-generator-triple-source-parse.md
.wex/python/: .last-commit
.wex/python/app_manager/: app_workdir.py  requirements.txt
responses/: abstract_prompt_response.yml
src/wexample_pseudocode/common/: docstring.py  type_normalizer.py  with_config_registry.py
src/wexample_pseudocode/config/: class_config.py  class_method_config.py  class_property_config.py  constant_config.py  doc_comment_config.py  doc_comment_parameter_config.py  doc_comment_return_config.py  function_config.py  function_parameter_config.py  generator_config.py  method_parameter_config.py
src/wexample_pseudocode/examples/factorization/: validations.yml
src/wexample_pseudocode/examples/factorization/migrations/: method_factorization.yml
src/wexample_pseudocode/examples/migration/: prompt_response_migration.yml
src/wexample_pseudocode/generator/: abstract_generator.py  code_generator.py  pseudocode_generator.py
src/wexample_pseudocode/guide/: 01_introduction.md  02_analyse_requirements.md  03_create_patterns.md  05_create_actions.md  06_create_migration.md
src/wexample_pseudocode/parser/: class_parser.py  function_parser.py  module_parser.py
tests/: conftest.py  test_class_basic_calculator.py  test_code_generator_class_basic_calculator.py  test_code_generator_constant.py  test_constant_using_const.py  test_function_items.py  test_php_yaml_compat.py
tests/resources/item/class/: basic_calculator.py  basic_calculator.py.txt  basic_calculator.yml
tests/resources/item/constant/: constant_using_const.py  constant_using_const.py.txt  constant_using_const.yml
tests/resources/item/function/: basic_function.py  basic_function.yml  complex_function.py  complex_function.yml
tmp/pseudocode_tests/: basic_calculator_actual.yml  basic_calculator_expected.yml  constant_using_const_actual.yml
wexample_pseudocode/example/: actions.yml  patterns.yml  validations.yml
wexample_pseudocode/examples/factorization/: actions.yml  patterns.yml
wexample_pseudocode/guide/: 04_create_validations.md  07_best_practices.md
