[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-pseudocode"
version = "0.0.22"
description = "Code creation and maintenance tools"
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2,<3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-pseudocode"

[project.optional-dependencies]
dev = [
    "pytest",
]
[tool.setuptools]
packages = [
    "pyyaml",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = [
    "src/wexample_pseudocode/py.typed",
]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_pseudocode"
from = "src"
